--- a/typst.toml
+++ b/typst.toml
@@ -1,10 +1,10 @@
 [package]
-name = "hsmz-thesis"
+name = "hsmz-thesis-unofficial"
 version = "0.1.0"
 entrypoint = "lib.typ"
 authors = ["Patrick Pfurtscheller <patrick@pfurtscheller.org>"]
 license = "MIT"
-description = "Unofficial Typst Template for thesis at Hochschule Mainz (HSMZ)"
+description = "Unofficial template for theses at Hochschule Mainz (HSMZ)"
 repository = "https://github.com/PfurtschellerP/hsmz-thesis-template-typst"
 keywords = ["thesis", "hsmz", "hochschule mainz"]
 categories = ["thesis"]
