--- a/.github/workflows/typst-formatting.yml
+++ b/.github/workflows/typst-formatting.yml
@@ -13,6 +13,8 @@ jobs:
 
       - name: Run typstyle
         uses: typstyle-rs/typstyle-action@main
+        with:
+          args: "--line-width 120"
 
       - name: Check for formatting changes
         run: |
