--- a/.github/workflows/typst-formatting.yml
+++ b/.github/workflows/typst-formatting.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Run typstyle
         uses: typstyle-rs/typstyle-action@main
         with:
-          args: "--line-width 120"
+          opts: "--line-width 120"
+          
 
       - name: Check for formatting changes
         run: |
